TOTP registration in NodeJS sample app
