# swagger.json
@@ -154,30 +154,24 @@
                 }
             }
         },
-        "/logout/{accessToken}": {
-            "get": {
+        "/logout": {
+            "post": {
                 "tags": [
                     "Auth"
                 ],
                 "summary": "Logout current authenticated user from the application",
                 "description": "Logout current authenticated user from the application",
                 "produces": ["application/json"],
-                "parameters": [
-                    {
-                        "in": "path",
-                        "name": "accessToken",
-                        "description": "One time auth token",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "successful operation",
                         "schema": {
-                            "type": "boolean"
+                            "type": "object",
+                            "properties": {
+                                "success": {
+                                    "type": "boolean"
+                                }
+                            }
                         }
                     }
                 }
@@ -236,6 +230,62 @@
                         "required": true,
                         "schema": {
                             "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful operation",
+                        "schema": {
+                            "$ref": "#/definitions/restResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/users/getTotpQr": {
+            "get": {
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Generates a TOTP QR",
+                "description": "Generates a TOTP QR",
+                "produces": ["application/json"],
+                "responses": {
+                    "200": {
+                        "description": "successful operation",
+                        "schema": {
+                            "$ref": "#/definitions/restResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/users/verifyTotp": {
+            "post": {
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Verifies the TOTP provided by the user",
+                "description": "Verifies the TOTP provided by the user",
+                "consumes": ["application/json"],
+                "produces": ["application/json"],
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "description": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "object",
+                            "properties": {
+                                "uuid": {
+                                    "type": "string"
+                                },
+                                "otpCode": {
+                                    "type": "string"
+                                }
+                            }
                         }
                     }
                 ],
